# BRPRobot2021

./: .gitignore  CMakeLists.txt  Eclipse IDE for Java and DSL Developers - 2021-06.desktop  README.md  Sequence Diagram UML  SequenceDiagramUML.txt  SlicerIGTLink.py  zFrame003.nrrd
SNR/: CMakeLists.txt  ZFrameRegistrationWithROI.py
SNR/BRPRobot-bridge-Slicer/: RebeccaClient  StringClient  StringEchoServer  StringServer
SNR/BRPRobot-bridge-Slicer/String/: CMakeLists.txt  LisaClient.cxx  LisaScript.cxx  LisaScript.h  LisaScript.hxx  RebeccaClient.cxx  SlicerCommunication.cxx  StringServer.cxx
SNR/BRPRobot-bridge-Slicer/String-build/: SlicerCommunication  StringClient  StringEchoServer
SNR/HMS_Marker_Detection/: CMakeLists.txt  HMS_Marker_DetectionConfig.cmake.in  HMS_Marker_DetectionConfigVersion.cmake.in
SNR/HMS_Marker_Detection/HMS_Marker_Detection/: CMakeLists.txt  HMS_Marker_Detection.cxx  HMS_Marker_Detection.xml  markers.csv
SNR/OpenIGTLink-build/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  OpenIGTLinkConfig.cmake  OpenIGTLinkTargets.cmake  cmake_install.cmake  igtlConfigure.h  igtlTypeConfig.h  igtl_typeconfig.h
SNR/OpenIGTLink-build/Examples/: CTestTestfile.cmake  Makefile  cmake_install.cmake
SNR/OpenIGTLink-build/Source/: Makefile  cmake_install.cmake
SNR/OpenIGTLink-build/Testing/: CTestTestfile.cmake  Makefile  cmake_install.cmake  igtlTestConfig.h
SNR/OpenIGTLink-build/Tools/: Makefile  cmake_install.cmake
SNR/OpenIGTLink-build/Utilities/: OpenIGTLinkConfig.cmake
SNR/Slicer Extension/ProstateBRPInterface/: CMakeLists.txt  ProstateBRPInterface.py  commandLogs.txt
SNR/SlicerExtension/: CMakeLists.txt
SNR/SlicerExtension/ProstateBRPInterface/: ProstateBRPInterface.py  defaults.ini
SNR/SlicerIGTlinkExtension/SlicerIGTLink/: SlicerIGTLink.py  workflowFunctions.py
SNR/client/: CMakeLists.txt  Client.cxx  Client.hxx  IGTControlBase.cxx  IGTControlBase.h  NavigationAccidentalCommandDuringManualModeTest.h  NavigationBridge.cxx  NavigationBridge.h  NavigationBridgeController.cxx  NavigationCalibrationErrorTest.h  NavigationDynamicCommunicationTest.cxx  NavigationDynamicCommunicationTest.h  NavigationEmergencyStopDuringOperationTest.h  NavigationHardwareErrorDuringOperationTest.h  NavigationIGTControlBase.cxx  NavigationIGTControlBase.h  NavigationMoveToWithoutTargetTest.h  NavigationNormalOperationTest.cxx  NavigationNormalOperationTest.h  NavigationOutOfRangeTest.h  NavigationSlicerScript.cxx  NavigationSlicerScript.hxx  NavigationStartUpErrorTest.h  NavigationStopDuringOperationTest.h  NavigationTargetingWithoutCalibrationTest.h  NavigationTestBase.cxx  NavigationTestBase.h  NavigationTestSimulator  NavigationTestSimulator.cxx  RunNavigationTestSimulator.bat  RunNavigationTestSimulator.sh  TestBase.cxx  TestBase.h  client.cxx  clientTemp.cxx  main.cxx  release  script.cxx  script.hxx  test  (+1 more)
SNR/client/BridgeTesting/: NavigationBridgeSimulator.cxx  NavigationCalibrationErrorTest.h  NavigationEmergencyStopDuringOperationTest.h  (+6 more)
WPI/: CMakeLists.txt  Robot.cxx  Robot.hpp  StringServer  main.cxx
WPI/Matlab/: Copy_of_main.m  Readme.md  Robot.asv  Robot.m  Server.m  backgroundLog.txt  connect.last  data_all.mat  main.asv  main.m  robot.m
WPI/MoterControl/: run_exp.m  set_vel_volt.m
WPI/NeedleKinematics/: BicycleKinematics.cxx  BicycleKinematics.h
WPI/Robot/: CMakeLists.txt  Robot.cxx  Robot.hpp
WPI/Server/: OpenIGTLink.cpp  OpenIGTLink.cxx  OpenIGTLink.h  README.md  RobotCalibrationPhase.cxx  RobotCalibrationPhase.h  RobotCommunicationBase.cxx  RobotCommunicationBase.h  RobotEmergencyPhase.cxx  RobotEmergencyPhase.h  RobotManualPhase.cxx  RobotManualPhase.h  RobotMoveToTargetPhase.cxx  RobotMoveToTargetPhase.h  RobotPhaseBase.cxx  RobotPhaseBase.h  RobotPlanningPhase.cxx  RobotPlanningPhase.h  RobotStartUpPhase.cxx  RobotStartUpPhase.h  RobotStatus.cxx  RobotStatus.h  RobotStopPhase.cxx  RobotStopPhase.h  RobotTargetingPhase.cxx  RobotTargetingPhase.h  RobotUndefinedPhase.cxx  RobotUndefinedPhase.h
WPI/SteeringAlgorithm/: SteeringAlgorithm.cxx  SteeringAlgorithm.h
WPI/classes/: CW_dir.m  ControlMethod.m  R_axis.m
WPI/cpp-old/: main.cxx
WPI/functions/: Cal_Omega.m  Cal_Ptb1_Ttb.m  Cal_Rotation_Matrix.m  Cal_k_P_tt_theta_d.m  Imitation_Profile.m  Imitation_Sensor.m  Update_EKF.m  Update_Needle_pose_select.m  Update_rot_dir.m  arduino_comm_init.m  arduino_comm_init_motor.m  get_encoder_tick.m  inverseHomogeneousTransform.m  plot_Kalman_Observer.m  plot_NeedleTrace3D.m  quaternion2y.m  radsec2rpm.m  set_rpm_ino.m
WPI/functions_tform/: Gen_pose2tform.m  Gen_tform2pose.m
WPI/kinematics_model/: bicycleKinematicsModel.m  expSE3.m  toLieSO3.asv  toLieSO3.m
WPI/server/: CMakeLists.txt  Robot.cxx  Robot.hpp  RobotCalibrationPhase.cxx  RobotCommunicationBase.cxx  RobotCommunicationBase.h  RobotEmergencyPhase.cxx  RobotEmergencyPhase.h  RobotManualPhase.cxx  RobotManualPhase.h  RobotMoveToTargetPhase.cxx  RobotPhaseBase.cxx  RobotPhaseBase.h  RobotPlanningPhase.h  RobotSimulatorCalibrationPhase.cxx  RobotSimulatorManualPhase.cxx  RobotSimulatorPhaseBase.cxx  RobotSimulatorPhaseBase.h  RobotSimulatorPlanningPhase.cxx  RobotSimulatorStartUpPhase.cxx  RobotSimulatorStartUpPhase.h  RobotSimulatorUndefinedPhase.cxx  RobotStatus.cxx  RobotStatus.h  RobotStopPhase.cxx  RobotStopPhase.h  RobotTargetingPhase.cxx  RobotTargetingPhase.h  RobotTest  RobotTestSimulator  Server.cxx  Server.hxx  TestBase.cxx  TestBase.h  main.cxx
WPI/string-build/: StringServer
WPI/utils/: Gen_Generate_ResDir.m  save_matfile.m
ZFrameRegistration/: .gitignore  CMakeLists.txt  README.md  ZFrameRegistration.cxx  ZFrameRegistration.xml
ZFrameRegistration/ZFrame/: Registration.cxx  Registration.h
ZFrameRegistration/ZFrameRegistration/: ZFrameRegistration.cxx  ZFrameRegistration.xml
ZFrameRegistration/ZFrameRegistrationScripted/: CMakeLists.txt  ZFrameRegistrationScripted.py
ZFrameRegistration/ZFrameRegistrationWithROI/: CMakeLists.txt  ZFrameRegistrationWithROI.py
ZFrameRegistration/newmat/: fft.cpp  newmat2.cpp
(+298 files in other folders)
